--- a/index.html
+++ b/index.html
@@ -2,22 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-<!-- ADD META TAG REQUIRED TO MAKE PAGE RESPONSIVE-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Terell Patillo">
     <meta name="description" content="Vanguard- Leading the Future of Success. Premier strategic investment and business acceleration firm for high-growth enterprises.">
     <meta name="keywords" content="business growth, strategic investment, mergers, corporate consulting, digital transformation">
-<!-- ADD META TAG FOR AUTHOR AND YOUR NAME-->
+    <link rel="stylesheet" href="styles.css">
     <title>Vanguard | Leading the Future of Success</title>
-<!-- ADD LINK TO YOUR CSS-->
 </head>
 
 <body>
 <!-- WRAP CONTENT IN VALIDATED, SEMANTIC HTML5 (SEE HINTS FOLDER LINKED TO IN THE CANVAS INSTRUCTIONS)-->
-    Vanguard
-        Main Navigation
-            About
-            Services
-            Contact
-
+    <header>
+        <div class="container">
+            <div class="branding">
+                <div class="logo"></div>
+            </div>
+        </div>
+    </header>
+    <h1>Vanguard</h1>
+        </div>
+        <nav>
+          <button class="menu-toggle" aria-label="toggle navigation">&#9776;</button>
+          <ul class="main-navigation">
+            <li><a href="#our-expertise">About</a></li>
+            <li><a href="#what-we-offer">Services</a></li>
+            <li><a href="#contact-us">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
         Innovation & Investment
         We empower businesses to lead the future with high-impact strategies, market intelligence, and financial solutions that drive success.
         Request a Consultation
