--- a/index.html
+++ b/index.html
@@ -16,11 +16,8 @@
         <div class="container">
             <div class="branding">
                 <div class="logo"></div>
+                <h1>Vanguard</h1>
             </div>
-        </div>
-    </header>
-    <h1>Vanguard</h1>
-        </div>
         <nav>
           <button class="menu-toggle" aria-label="toggle navigation">&#9776;</button>
           <ul class="main-navigation">
@@ -30,85 +27,160 @@
           </ul>
         </nav>
       </div>
-        Innovation & Investment
-        We empower businesses to lead the future with high-impact strategies, market intelligence, and financial solutions that drive success.
-        Request a Consultation
+      </header>
+      
+    <section id="innovation-investment" class="hero">
+      <div class="container">
+        <h2>Innovation & Investment</h2>
+        <p>
+          We empower businesses to lead the future with high-impact strategies, market intelligence, and financial solutions that drive success.
+        </p>
+        <a href="#contact-us" class="button">Request a Consultation</a>
+      </div>
+    </section>
 
-        Our Expertise. Your Edge.
-        We redefine success by leveraging AI-driven analytics, market intelligence, and high-yield investment strategies to propel businesses forward. Whether you're looking to scale, optimize, or dominate, our strategic expertise delivers results.'
+    <section id="our-expertise">
+      <div class="container">
+        <h2>Our Expertise. Your Edge.</h2>
+        <p>
+          We redefine success by leveraging AI-driven analytics, market intelligence, and high-yield investment strategies to propel businesses forward. Whether you're looking to scale, optimize, or dominate, our strategic expertise delivers results.
+        </p>
+      </div>
+    </section>
 
-        What We Offer
-            Strategic Growth Consulting
-            Unlock new revenue streams and optimize market expansion strategies.
+    <section id="what-we-offer">
+      <div class="container">
+        <h2>What We Offer</h2>
+        <div class="offerings-grid">
+          <div class="offering-card">
+            <h3>Strategic Growth Consulting</h3>
+            <p>Unlock new revenue streams and optimize market expansion strategies.</p>
+          </div>
+          <div class="offering-card">
+            <h3>High-Impact Investment Solutions</h3>
+            <p>Maximize returns with data-driven portfolio management.</p>
+          </div>
+          <div class="offering-card">
+            <h3>Business Acceleration & Mergers</h3>
+            <p>Identify opportunities for rapid growth and high-value acquisitions.</p>
+          </div>
+          <div class="offering-card">
+            <h3>Digital Transformation</h3>
+            <p>Stay at the forefront of industry advancements with AI, blockchain, and automation.</p>
+          </div>
+          <div class="offering-card">
+            <h3>Exclusive Executive Advisory Services</h3>
+            <p>Personalized insights and leadership support for C-suite executives and high-net-worth investors.</p>
+          </div>
+          <div class="offering-card">
+            <h3>Corporate Innovation</h3>
+            <p>Implementing cutting-edge ideas and technologies to drive growth, stay competitive, and meet evolving market needs.</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
-            High-Impact Investment Solutions
-            Maximize returns with data-driven portfolio management.
+    <section id="proven-results">
+      <div class="container results-container">
+        <h2>Proven Results</h2>
+        <p>
+          Our data-driven strategies have delivered outstanding ROI, leading to significant revenue growth.
+        </p>
+        <div class="results-content">
+          <div class="results-table-group">
+            <h3>Profits</h3>
+            <div class="results-table">
+              <div class="profits-table-wrapper">
+                <table>
+                  <thead>
+                    <tr>
+                      <th scope="col">Year</th>
+                      <th scope="col">Revenue ($M)</th>
+                      <th scope="col">Growth (%)</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr><td>2020</td><td>$120</td><td>30%</td></tr>
+                    <tr><td>2021</td><td>$180</td><td>50%</td></tr>
+                    <tr><td>2022</td><td>$250</td><td>70%</td></tr>
+                    <tr><td>2023</td><td>$340</td><td>85%</td></tr>
+                    <tr><td>2024</td><td>$420</td><td>100%</td></tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+          <div class="results-chart-group">
+            <h3>Growth</h3>
+            <div class="results-chart">
+              <div id="bar-chart">
+                <div class="bar" data-year="2020" style="--height: 30%;"></div>
+                <div class="bar" data-year="2021" style="--height: 50%;"></div>
+                <div class="bar" data-year="2022" style="--height: 70%;"></div>
+                <div class="bar" data-year="2023" style="--height: 85%;"></div>
+                <div class="bar" data-year="2024" style="--height: 100%;"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-            Business Acceleration & Mergers
-            Identify opportunities for rapid growth and high-value acquisitions.
+    <section id="contact-us">
+      <div class="container">
+        <h2>Contact Us</h2>
+        <p>
+          Ready to accelerate your business growth? Contact our experienced team to discuss your goals today.
+        </p>
+        <form action="#">
+          <div class="form-row">
+            <div class="form-group">
+              <label for="full-name">Full Name</label>
+              <input type="text" id="full-name" name="full-name" required autocomplete="name">
+            </div>
+            <div class="form-group">
+              <label for="email">Email Address</label>
+              <input type="email" id="email" name="email" required autocomplete="email">
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group">
+              <label for="company-name">Company Name</label>
+              <input type="text" id="company-name" name="company-name" autocomplete="organization">
+            </div>
+            <div class="form-group">
+              <label for="industry">Industry</label>
+              <input type="text" id="industry" name="industry">
+            </div>
+          </div>
+          <div class="form-bottom-row">
+            <div class="form-group full-width-textarea">
+              <label for="how-can-we-help">How can we help you?</label>
+              <textarea id="how-can-we-help" name="how-can-we-help" rows="5"></textarea>
+            </div>
+            <button type="submit" class="button form-submit-button">Submit</button>
+          </div>
+        </form>
+      </div>
+    </section>
 
-            Digital Transformation
-            Stay at the forefront of industry advancements with AI, blockchain, and automation.
+    <footer>
+      <div class="container">
+        <p>&copy; 2025 Vanguard. All rights reserved.</p>
+        <p>Email: <a href="mailto:info@vanguard.com">info@vanguard.com</a></p>
+        <p>Phone: 480.123.4567</p>
+      </div>
+    </footer>
 
-            Exclusive Executive Advisory Services
-            Personalized insights and leadership support for C-suite executives and high-net-worth investors.
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
+        const menuToggle = document.querySelector('.menu-toggle');
+        const mainNavigation = document.querySelector('.main-navigation');
 
-            Corporate Innovation
-            Strategic implementation of new ideas, technologies, and processes to drive business growth, enhance competitive advantage, and adapt to evolving market demands.
-
-            Proven Results
-            Our data-driven strategies have delivered outstanding ROI, leading to significant revenue growth.
-
-                Profits
-                Year
-                Revenue ($M)
-                Growth (%)
-
-                2020
-                $120M
-                30%
-
-                2021
-                $180M
-                50%
-
-                2022
-                $250M
-                70%
-
-                2023
-                $340M
-                85%
-
-                2024
-                $420M
-                100%
-
-                Growth
-<!-- CODE PROVIDED FOR YOU, NOTHING TO DO FOR THE BAR CHART IN THE HTML-->
-                    <div  id="bar-chart">
-                        <div class="bar" data-year="2020" style="--height: 30%;"></div>
-                        <div class="bar" data-year="2021" style="--height: 50%;"></div>
-                        <div class="bar" data-year="2022" style="--height: 70%;"></div>
-                        <div class="bar" data-year="2023" style="--height: 85%;"></div>
-                        <div class="bar" data-year="2024" style="--height: 100%;"></div>
-                    </div>
-
-        Contact Us
-        Want to take your business to the next level? Get in touch with our elite team today.
-
-            Full Name
-
-            Email Address
-
-            Company Name
-
-            Industry
-
-            How can we help you?
-
-            Submit
-
-        2025 Vanguard. All rights reserved. 
-        Email: info@vanguard.com 
-        Phone: 480.123.4567
+        menuToggle.addEventListener('click', function () {
+          mainNavigation.classList.toggle('active');
+        });
+      });
+    </script>
+  </body>
+</html>
